--- a/_posts/2022-11-23-trpo.markdown
+++ b/_posts/2022-11-23-trpo.markdown
@@ -15,6 +15,7 @@ eqn-number: true
 	- [Coupling & Total variation distance](#coupling-tvd)
 	- [Likelihood Ratio Policy Gradient](#likelihood-ratio-pg)
 - [Policy Improvement](#policy-imp)
+- [Parameterized Policy Optimization by Trust Region](#param-policy-opt)
 - [References](#references)
 - [Footnotes](#footnotes)
 
@@ -57,7 +58,7 @@ A_\pi(s_t,a_t)=Q_\pi(s_t,a_t)-V_\pi(s_t)
 
 ### Coupling & Total variation distance
 {: #coupling-tvd}
-Consider two probability measures$ \mu$ and $\nu$ on a probability space $\Omega$. One refers a **coupling** of $\mu$ and $\nu$ as a pair of random variables $(X,Y)$ such that the marginal distribution of $X$ and $Y$ are respectively $\mu$ and $\nu$.
+Consider two probability measures $\mu$ and $\nu$ on a probability space $(\Omega,\mathcal{F},P)$. One refers a **coupling** of $\mu$ and $\nu$ as a pair of random variables $(X,Y)$ such that the marginal distribution of $X$ and $Y$ are respectively $\mu$ and $\nu$.
 
 Specifically, if $p$ is a joint distribution of $X,Y$ on $\Omega$, then it implies that
 \begin{align}
@@ -65,7 +66,7 @@ Specifically, if $p$ is a joint distribution of $X,Y$ on $\Omega$, then it impli
 \end{align}
 For probability distributions $\mu$ and $\nu$ on $\Omega$ as above, the **total variation distance** between $\mu$ and $\nu$, denoted $\big\Vert\mu-\nu\big\Vert_\text{TV}$, is defined by
 \begin{equation}
-\big\Vert\mu-\nu\big\Vert_\text{TV}\doteq\max_{A\\subset\Omega}\big\vert\mu(A)-\nu(A)\big\vert
+\big\Vert\mu-\nu\big\Vert_\text{TV}\doteq\sup_{A\\subset\Omega}\big\vert\mu(A)-\nu(A)\big\vert
 \end{equation}
 **Proposition 1**  
 Let $\mu$ and $\nu$ be probability distributions on $\Omega$, we then have
@@ -101,7 +102,7 @@ For any $A\subset\Omega$ and for any coupling $(X,Y)$ of $\mu$ and $\nu$ we have
 \end{align}
 which implies that
 \begin{equation}
-\big\Vert\mu-\nu\big\Vert_\text{TV}=\max_{A'\subset\Omega}\big\vert\mu(A')-\nu(A')\big\vert\leq P(X\neq Y)\leq\inf_{(X,Y)\text{ coupling of }\mu,\nu}P(X\neq Y)
+\big\Vert\mu-\nu\big\Vert_\text{TV}=\sup_{A'\subset\Omega}\big\vert\mu(A')-\nu(A')\big\vert\leq P(X\neq Y)\leq\inf_{(X,Y)\text{ coupling of }\mu,\nu}P(X\neq Y)
 \end{equation}
 Thus, it suffices to construct a coupling $(X,Y)$ of $\mu$ and $\nu$ such that
 \begin{equation}
@@ -258,6 +259,58 @@ In addition, we need to define some notations:
 	</li>
 </ul>
 
+**Theorem 5**  
+Let $\alpha=\big\Vert\pi-\tilde{\pi}\big\Vert_\text{TV}^\text{max}$. The following holds
+\begin{equation}
+\eta(\tilde{\pi})\geq L_\pi(\tilde{\pi})-\frac{4\epsilon\gamma}{(1-\gamma)^2}\alpha^2,
+\end{equation}
+where
+\begin{equation}
+\epsilon=\max_{s,a}\big\vert A_\pi(s,a)\big\vert
+\end{equation}
+**Proof**  
+
+
+On the other hand, by **Pinsker's inequality**, which bounds the total variation distance in terms of the **Kullback-Leibler divergence**, denoted $D_\text{KL}$, we have that
+\begin{equation}
+\big\Vert\pi-\tilde{\pi}\big\Vert_\text{TV}^2\leq\frac{1}{2}D_\text{KL}(\pi\Vert\tilde{\pi})\leq D_\text{KL}(\pi\Vert\tilde{\pi}),\label{eq:pi.3}
+\end{equation}
+since $D_\text{KL}(\cdot\Vert\cdot)\geq 0$. Thus, let
+\begin{equation}
+D_\text{KL}^\text{max}(\pi,\tilde{\pi})\doteq\max_s D_\text{KL}\big(\pi(\cdot\vert s)\Vert\tilde{\pi}(\cdot\vert s)\big),
+\end{equation}
+with the result \eqref{eq:pi.3} and by **Theorem 5**, we have
+\begin{equation}
+\eta(\tilde{\pi})\geq L_\pi(\tilde{\pi})-CD_\text{KL}^\text{max}(\pi,\tilde{\pi}),\label{eq:pi.4}
+\end{equation}
+where
+\begin{equation}
+C=\frac{4\epsilon\gamma}{(1-\gamma)^2}
+\end{equation}
+The policy improvement bound \eqref{eq:pi.4} allows us to specify a policy iteration, as given in the following pseudocode
+<figure>
+	<img src="/assets/images/2022-11-23/policy-iteration-nondec-exp-return.png" alt="Non-decreasing expected return policy iteration" style="display: block; margin-left: auto; margin-right: auto;"/>
+	<figcaption style="text-align: center;font-style: italic;"></figcaption>
+</figure>
+It is worth noticing that \eqref{eq:pi.4} allows the policy iteration above to guarantee to generating a sequence of non-decreasing expected returns $\eta(\pi_0)\leq\eta(\pi_1)\leq\eta(\pi_2)\leq\ldots$.
+
+To see this, let
+\begin{equation}
+M_i(\pi)\doteq L_{\pi_i}(\pi)-CD_\text{KL}^\text{max}(\pi_i,\pi),
+\end{equation}
+by \eqref{eq:pi.4}, we then have
+\begin{equation}
+\eta(\pi_{i+1})\geq M_i(\pi_{i+1}),
+\end{equation}
+which implies that
+\begin{equation}
+\eta(\pi_{i+1})-\eta(\pi_i)=\eta(\pi_{i+1})-M_i(\pi_i)\geq M_i(\pi_{i+1})-M_i(\pi_i)
+\end{equation}
+
+
+
+## Parameterized Policy Optimization by Trust Region
+{: #param-policy-opt}
 
 ## References
 {: #references}
