--- a/_posts/2022-11-23-trpo.markdown
+++ b/_posts/2022-11-23-trpo.markdown
@@ -15,12 +15,15 @@ eqn-number: true
 	- [Coupling & Total variation distance](#coupling-tvd)
 - [Policy Improvement](#policy-imp)
 - [Parameterized Policy Optimization by Trust Region](#param-policy-opt)
+- [Sampled-based estimation](#sampled-bsd-est)
+	- [Single path](#sgl)
+	- [Vine](#vine)
 - [References](#references)
 - [Footnotes](#footnotes)
 
 ## Preliminaries
 {: #preliminaries}
-We begin by recalling the familiar definition of MDPs, also combined with mentioning about likelihood ratio policy gradient, coupling and total variation distance.
+We begin by recalling definition of MDPs, coupling and total variation distance.
 
 ### Markov Decision Processes
 {: #mdp}
@@ -177,7 +180,7 @@ In addition, we need to define some notations:
 		<b>Proof</b><br>
 		By definition of the advantage function, it is easily noticed that $\mathbb{E}_{a\sim\pi}\big[A_\pi(s,a)\big]=0$, which lets us obtain
 		\begin{align}
-		\bar{A}(s)&=\mathbb{E}_{\tilde{a}\sim\tilde{\pi}}\big[A_\pi(s,\tilde{a})\big] \\\\ &=\mathbb{E}_{a\sim\pi,\tilde{a}\sim\tilde{\pi}}\big[A_\pi(s,\tilde{a})-A_\pi(s,a)\big] \\\\ &=P(a\neq\tilde{a}\vert s)\mathbb{E}_{a\sim\pi,\tilde{a}\sim\tilde{\pi}\vert a\neq\tilde{a}}\big[A_\pi(s,\tilde{a})-A_\pi(s,a)\big],
+		\bar{A}(s)&=\mathbb{E}_{\tilde{a}\sim\tilde{\pi}}\big[A_\pi(s,\tilde{a})\big] \\ &=\mathbb{E}_{a\sim\pi,\tilde{a}\sim\tilde{\pi}}\big[A_\pi(s,\tilde{a})-A_\pi(s,a)\big] \\ &=P(a\neq\tilde{a}\vert s)\mathbb{E}_{a\sim\pi,\tilde{a}\sim\tilde{\pi}\vert a\neq\tilde{a}}\big[A_\pi(s,\tilde{a})-A_\pi(s,a)\big],
 		\end{align}
 		which by definition of $\alpha$-coupling implies that
 		\begin{equation}
@@ -254,19 +257,83 @@ where the equality holds at $\theta=\theta_\text{old}$. This means, we get a gua
 \end{equation}
 To speed up the algorithm, we make some robust modification. Specifically, we instead solve a **trust region problem**:
 \begin{align}
-\underset{\theta}{\text{maximize}}&\,L_{\theta_\text{old}}(\theta) \\\\ \text{s.t.}&\,\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\leq\delta,
+\underset{\theta}{\text{maximize}}&\,L_{\theta_\text{old}}(\theta)\nonumber \\\\ \text{s.t.}&\,\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\leq\delta,\label{eq:ppo.1}
 \end{align}
 where $\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}$ is the average KL divergence, given as
 \begin{equation}
 \overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\doteq\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]
 \end{equation}
-By the definition of $L$, given in \eqref{eq:pi.5}, we can rewrite our optimization problem as
+Let us pay attention to our objective function, $L_{\theta_\text{old}}(\theta)$, for a while. By the definition of $L$, given in \eqref{eq:pi.5}, combined with using an [importance sampling estimator]({% post_url 2022-05-25-likelihood-ratio-pg-is %}), we can rewrite the objective function of \eqref{eq:ppo.1} as 
 \begin{align}
-\underset{\theta}{\text{maximize}}&\,\sum_s\rho_{\theta_\text{old}}(s)\sum_a\pi_\theta(a\vert s)A_{\theta_\text{old}}(s,a) \\\\ \text{s.t.}&\,\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\leq\delta,
+L_{\theta_\text{old}}(\theta)&=\sum_s\rho_{\theta_\text{old}}(s)\sum_a\pi_\theta(a\vert s)A_{\theta_\text{old}}(s,a) \\\\ &=\sum_s\rho_{\theta_\text{old}}(s)\mathbb{E}\_{a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}A_{\theta_\text{old}}(s,a)\right]
 \end{align}
-where $A_{\theta_\text{old}}\doteq A_{\pi_{\theta_\text{old}}}$.
+where $A_{\theta_\text{old}}\doteq A_{\pi_{\theta_\text{old}}}$; and $q$ represents the sampling distribution. The trust region problem now is given as
+\begin{align}
+\underset{\theta}{\text{maximize}}&\,\sum_s\rho_{\theta_\text{old}}(s)\mathbb{E}\_{a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}A_{\theta_\text{old}}(s,a)\right]\nonumber \\\\ \text{s.t.}&\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]\leq\delta
+\end{align}
+which, since $A_{\theta_\text{old}}(s,a)=Q_{\theta_\text{old}}(s,a)-V_{\theta_\text{old}}(s)$, is thus equivalent to
+\begin{align}
+\underset{\theta}{\text{maximize}}&\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}},a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}Q_{\theta_\text{old}}(s,a)\right]\nonumber \\\\ \text{s.t.}&\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]\leq\delta\label{eq:ppo.2}
+\end{align}
 
+## Sampled-based estimation
+{: #sampled-bsd-est}
+The objective and constraint functions of \eqref{eq:ppo.2} can be approximated using Monte Carlo simulation. Following are two possible sampling approach to construct the estimated objective and constraint functions.
 
+### Single path
+{: #sgl}
+This sampling scheme has the following procedure
+<ul id='number-list'>
+	<li>
+		Sample $s_0\sim\rho_0$ to get a set of $m$ start states $\mathcal{S}_0=\{s_0^{(1)},\ldots,s_0^{(m)}\}$.
+	</li>
+	<li>
+		For each $s_0^{(i)}\in\mathcal{S}_0$, generate a trajectory $\tau^{(i)}=\big(s_0^{(i)},a_0^{(i)},s_1^{(i)},a_1^{(i)},\ldots,s_{T-1}^{(i)},a_{T-1}^{(i)},s_T^{(i)}\big)$ by rolling out the policy $\pi_{\theta_\text{old}}$ for $T$ steps. Thus $q(a^{(i)}\vert s^{(i)})=\pi_{\theta_\text{old}}(a^{(i)}\vert s^{(i)})$.
+	</li>
+	<li>
+		At each state-action pair $(s_t^{(i)},a_t^{(i)})$, compute the action-value function $Q_{\theta_\text{old}}(s,a)$ by taking the discounted sum of future rewards along $\tau^{(i)}$.
+	</li>
+</ul>
+
+### Vine
+{: #vine}
+This sampling approach follows this process
+<ul id='number-list'>
+	<li>
+		Sample $s_0\sim\rho_0$ and simulate the policy $\pi_{\theta_i}$ to generate $m$ trajectories.
+	</li>
+	<li>
+		Choose a rollout set, which is a subset $s_1,\ldots,s_N$ of $N$ states along the trajectories.
+	</li>
+	<li>
+		For each state $s_n$ with $1\leq n\leq N$, sample $K$ actions according to $a_{n,k}\sim q(\cdot\vert s_n)$, where $q(\cdot\vert s_n)$ includes the support of $\pi_{\theta_i}(\cdot\vert s_n)$.
+	</li>
+	<li>
+		For each action $a_{n,k}$, estimate $\hat{Q}_{\theta_i}(s_n,a_{n,k})$ by performing a rollout starting from $s_n$ and taking action $a_{n,k}$
+	</li>
+	<li>
+		Given the estimated action-value function, $\hat{Q}_{\theta_i}(s_n,a_{n,k})$, for each state-action pair $(s_n,a_{n,k})$, compute the estimator, $L_n(\theta)$, of $L_{\theta_\text{old}}$ at state $s_n$ as:
+		<ul id='roman-list'>
+			<li>
+				For small, finite action spaces, in which generating a rollout for every possible action from a given state is possible, thus
+				\begin{equation}
+					L_n(\theta)=\sum_{k=1}^{K}\pi_\theta(a_k\vert s_n)\hat{Q}(s_n,a_k),
+				\end{equation}
+				where $\mathcal{A}=\{a_1,\ldots,a_K\}$ is the action space.
+			</li>
+			<li>
+				For large or continuous state spaces, use importance sampling
+				\begin{equation}
+				L_n(\theta)=\frac{\sum_{k=1}^{K}\frac{\pi_\theta(a_{n,k}\vert s_n)}{\pi_{\theta_\text{old}}(a_{n,k}\vert s_n)}\hat{Q}(s_n,a_{n,k})}{\sum_{k=1}^{K}\frac{\pi_\theta(a_{n,k}\vert s_n)}{\pi_{\theta_\text{old}}(a_{n,k}\vert s_n)}},
+				\end{equation}
+				assuming that $K$ actions $a_{n,1},\ldots,a_{n,K}$ are performed from state $s_n$.
+			</li>
+		</ul>
+	</li>
+	<li>
+		Average over $s_n\sim\rho(\pi)$ to obtain an estimator for $L_{\theta_\text{old}}$, along with its gradient.
+	</li>
+</ul>
 
 ## References
 {: #references}
