--- a/_posts/2022-11-23-trpo.markdown
+++ b/_posts/2022-11-23-trpo.markdown
@@ -18,6 +18,8 @@ eqn-number: true
 - [Sampled-based estimation](#sampled-bsd-est)
 	- [Single path](#sgl)
 	- [Vine](#vine)
+- [Final algorithm](#fin-alg)
+- [Proximal Policy Optimization](#ppo)
 - [References](#references)
 - [Footnotes](#footnotes)
 
@@ -253,27 +255,27 @@ Also let $\theta_\text{old}$ denote the previous policy parameters that we want 
 \end{equation}
 where the equality holds at $\theta=\theta_\text{old}$. This means, we get a guaranteed improvement to the true objective function $\eta$ by solving the following optimization problem
 \begin{equation}
-\underset{\theta}{\text{maximize}}\,\big[L_{\theta_\text{old}}(\theta)-CD_\text{KL}^\text{max}(\theta_\text{old},\theta)\big]
+\underset{\theta}{\text{maximize}}\,\,\big[L_{\theta_\text{old}}(\theta)-CD_\text{KL}^\text{max}(\theta_\text{old},\theta)\big]
 \end{equation}
 To speed up the algorithm, we make some robust modification. Specifically, we instead solve a **trust region problem**:
 \begin{align}
-\underset{\theta}{\text{maximize}}&\,L_{\theta_\text{old}}(\theta)\nonumber \\\\ \text{s.t.}&\,\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\leq\delta,\label{eq:ppo.1}
+\underset{\theta}{\text{maximize}}&\,\,L_{\theta_\text{old}}(\theta)\nonumber \\\\ \text{s.t.}&\,\,\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\leq\delta,\label{eq:ppo.1}
 \end{align}
 where $\overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}$ is the average KL divergence, given as
 \begin{equation}
 \overline{D}\_\text{KL}^{\rho_{\theta_\text{old}}}(\theta_\text{old},\theta)\doteq\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]
 \end{equation}
-Let us pay attention to our objective function, $L_{\theta_\text{old}}(\theta)$, for a while. By the definition of $L$, given in \eqref{eq:pi.5}, combined with using an [importance sampling estimator]({% post_url 2022-05-25-likelihood-ratio-pg-is %}), we can rewrite the objective function of \eqref{eq:ppo.1} as 
+Let us pay attention to our objective function, $L_{\theta_\text{old}}(\theta)$, for a while. By the definition of $L$, given in \eqref{eq:pi.5}, combined with using an [importance sampling estimator]({% post_url 2022-05-25-likelihood-ratio-pg-is %}#likelihood-ratio-pg-is), we can rewrite the objective function of \eqref{eq:ppo.1} as 
 \begin{align}
 L_{\theta_\text{old}}(\theta)&=\sum_s\rho_{\theta_\text{old}}(s)\sum_a\pi_\theta(a\vert s)A_{\theta_\text{old}}(s,a) \\\\ &=\sum_s\rho_{\theta_\text{old}}(s)\mathbb{E}\_{a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}A_{\theta_\text{old}}(s,a)\right]
 \end{align}
 where $A_{\theta_\text{old}}\doteq A_{\pi_{\theta_\text{old}}}$; and $q$ represents the sampling distribution. The trust region problem now is given as
 \begin{align}
-\underset{\theta}{\text{maximize}}&\,\sum_s\rho_{\theta_\text{old}}(s)\mathbb{E}\_{a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}A_{\theta_\text{old}}(s,a)\right]\nonumber \\\\ \text{s.t.}&\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]\leq\delta
+\underset{\theta}{\text{maximize}}&\,\,\sum_s\rho_{\theta_\text{old}}(s)\mathbb{E}\_{a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}A_{\theta_\text{old}}(s,a)\right]\nonumber \\\\ \text{s.t.}&\,\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]\leq\delta
 \end{align}
 which, since $A_{\theta_\text{old}}(s,a)=Q_{\theta_\text{old}}(s,a)-V_{\theta_\text{old}}(s)$, is thus equivalent to
 \begin{align}
-\underset{\theta}{\text{maximize}}&\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}},a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}Q_{\theta_\text{old}}(s,a)\right]\nonumber \\\\ \text{s.t.}&\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]\leq\delta\label{eq:ppo.2}
+\underset{\theta}{\text{maximize}}&\,\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}},a\sim q}\left[\frac{\pi_\theta(a\vert s)}{q(a\vert s)}Q_{\theta_\text{old}}(s,a)\right]\nonumber \\\\ \text{s.t.}&\,\,\mathbb{E}\_{s\sim\rho_{\theta_\text{old}}}\Big[D_\text{KL}\big(\pi_{\theta_\text{old}}(\cdot\vert s)\Vert\pi_\theta(\cdot\vert s)\big)\Big]\leq\delta\label{eq:ppo.2}
 \end{align}
 
 ## Sampled-based estimation
@@ -297,7 +299,7 @@ This sampling scheme has the following procedure
 
 ### Vine
 {: #vine}
-This sampling approach follows this process
+This sampling approach follows the following process
 <ul id='number-list'>
 	<li>
 		Sample $s_0\sim\rho_0$ and simulate the policy $\pi_{\theta_i}$ to generate $m$ trajectories.
@@ -331,9 +333,15 @@ This sampling approach follows this process
 		</ul>
 	</li>
 	<li>
-		Average over $s_n\sim\rho(\pi)$ to obtain an estimator for $L_{\theta_\text{old}}$, along with its gradient.
+		Average over $s_n\sim\rho(\pi)$ to obtain an estimator for $L_{\theta_\text{old}}$, as well the policy gradient.
 	</li>
 </ul>
+
+## Final algorithm
+{: #fin-alg}
+
+## Proximal Policy Optimization
+{: #ppo}
 
 ## References
 {: #references}
@@ -342,6 +350,8 @@ This sampling approach follows this process
 [2] David A. Levin, Yuval Peres, Elizabeth L. Wilmer. [Markov chains and mixing times](https://pages.uoregon.edu/dlevin/MARKOV/markovmixing.pdf). American Mathematical Society, 2009.
 
 [3] Sham Kakade,  John Langford. [Approximately optimal approximate reinforcement learning](https://dl.acm.org/doi/10.5555/645531.656005). ICML'2, pp. 267–274, 2002.  
+
+[4] John Schulman, Filip Wolski, Prafulla Dhariwal, Alec Radford, Oleg Klimov. [Proximal Policy Optimization Algorithms](https://arxiv.org/abs/1707.06347). arXiv:1707.06347, 2017.
 
 ## Footnotes
 {: #footnotes}
